src/test/scala/wacc/wacc_examples/invalid/semanticErr/classes/classSelfRef.wacc
# class contains instance of itself

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
    class MyClass {
        MyClass x
    }
end
